# rust-greeter

./: .drone.yml  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.builder  README.md  Taskfile.yaml  cross-compile.md  docker-compose.yaml  rust-dev-env.yaml
.devcontainer/: devcontainer.json
docker/: Dockerfile.linux arm64  Dockerfile.linux.amd64  Dockerfile.linux.arm64  Dockerfile.multi  manifest.tmpl
src/: lib.rs  main.rs
src/service/: greeter.rs  greeter_routes.rs
tests/: it.rs
tests/common/: mod.rs
