[package]
name = "rust-hello-world"
version = "0.1.0"
edition = "2021"
description = "Hello World and Greetings using rust-lang."
readme = "README.md"
license-file = "LICENSE"
authors = ["Kamesh Sampath<kamesh.sampath@hotmail.com>"]
keywords = ["hello-world","demos","REST"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.6"
hyper = { version = "0.14.24", features = ["full"] }
serde = { version = "1.0.152",features = ["derive"]}
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }

