[package]
name = "rgreeter"
version = "0.1.0"
edition = "2021"
description = "A simple REST API to greeter a user by name. Typically used for quick demos and checks."
readme = "README.md"
license = "Apache-2.0"
authors = ["Kamesh Sampath<kamesh.sampath@hotmail.com>"]
keywords = ["greeter","demos","REST","drone-io","cargo-zigbuild"]
repository = "https://github.com/kameshsampath/rust-hello-world"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.6"
hyper = { version = "0.14.24", features = ["full"] }
serde = { version = "1.0.152",features = ["derive"]}
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }

[profile.release]
strip = true